# gh-action-wiki-sync

./: .copier-answers-py.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  action.yaml  compose.yaml  entrypoint.sh  hatch.toml  mise.toml  noxfile.py  pyproject.toml  quick-push.sh  readme.md  ruff.toml  sync_utils.py  test_sync.py  wiki-sync.py
.circleci/: config.yml
.github/workflows/: wiki-sync.yaml
mise/tasks/: wiki-sync
requirements/: ci.txt  dev.txt  test.in  test.txt
src/: sync_utils.py  test_sync.py  wiki-sync.py
wiki/: Development.md  Home.md  Starfleet.md
